# bili_download

./: .gitignore  README.md  download.bat  pyproject.toml
docs/: git-playbook.md  research-notes.md
extension/: README.md  manifest.json
extension/rules/: bili-media-headers.json
extension/src/: background.js  content.js  dash-muxer.mjs  popup.html  popup.js  styles.css
extension/tests/: smoke.mjs
packaging/: entrypoint.py
scripts/: build_exe.ps1  download.ps1
src/bili_download/: __init__.py  cli.py  client.py  cookies.py  danmaku.py  downloader.py  gui.py  models.py  video_id.py
tests/: test_cli.py  test_client.py  test_cookies.py  test_danmaku.py  test_downloader.py  test_gui.py  test_video_id.py
