[project]
name = "bili-download"
version = "0.1.0"
description = "A learning-first Bilibili downloader project."
requires-python = ">=3.11"
dependencies = [
    "imageio-ffmpeg>=0.6",
]

[project.scripts]
bili-download = "bili_download.cli:main"
bili-download-gui = "bili_download.gui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]
